View Issue Details

IDProjectCategoryView StatusLast Update
0033743CommunityOCCT:Modeling Algorithmspublic2024-09-05 21:21
ReporterFlachyJoe Assigned Toakaftasev  
PrioritynormalSeveritycrash 
Status resolvedResolutionopen 
PlatformLinuxOSDebian 
Product Version7.8.2 
Summary0033743: Modeling Algorithms - Crash in BRepFilletAPI_MakeChamfer
DescriptionSome edge can result in a SIGSEGV when given to the BRepFilletAPI_MakeChamfer algorithm.
Steps To ReproduceA full crashtest is given below with a failing geometry and the resulting backtrace.
TagsNo tags attached.
Test case number

Attached Files

  • BRepFilletAPI_MakeChamfer-crashtest.zip (4,501 bytes)
  • Backtrace.txt (59,682 bytes)

Activities

FlachyJoe

2024-06-17 00:14

developer  

BRepFilletAPI_MakeChamfer-crashtest.zip (4,501 bytes)
Backtrace.txt (59,682 bytes)

git

2024-06-19 22:19

administrator   ~0116056

Branch CR33743 has been created by FlachyJoe.

SHA-1: 4abf89322e81491cb02b0debfe2026af9c0a5f5e


Detailed log of new commits:

Author: Florian Foinant-Willig
Date: Wed Jun 19 21:18:57 2024 +0200

    0033743: Modeling Algorithm - fix crash with BRepFilletAPI_MakeChamfer
    
    Handle a case where a newly created face does not contain a required
    edge. Since the null edge was passed in, the algorithm would eventually
    crash when trying to access its members.

dpasukhi

2024-09-05 21:21

administrator   ~0116594

Reminder sent to: akaftasev

Issue History

Date Modified Username Field Change
2024-06-17 00:14 FlachyJoe New Issue
2024-06-17 00:14 FlachyJoe Assigned To => akaftasev
2024-06-17 00:14 FlachyJoe File Added: BRepFilletAPI_MakeChamfer-crashtest.zip
2024-06-17 00:14 FlachyJoe File Added: Backtrace.txt
2024-06-17 14:19 dpasukhi Summary Crash in BRepFilletAPI_MakeChamfer => Modeling Algorithms - Crash in BRepFilletAPI_MakeChamfer
2024-06-19 22:19 git Note Added: 0116056
2024-06-19 22:20 FlachyJoe Assigned To akaftasev => FlachyJoe
2024-06-30 23:04 FlachyJoe Assigned To FlachyJoe => akaftasev
2024-06-30 23:04 FlachyJoe Status new => resolved
2024-09-05 21:21 dpasukhi Note Added: 0116594