0033743: Modeling Algorithm - fix crash with BRepFilletAPI_MakeChamfer

Handle a case where a newly created face does not contain a required
edge. Since the null edge was passed in, the algorithm would eventually
crash when trying to access its members.